Update deploy workflow, add deploy job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,18 @@ jobs:
           file: DockerfileProd
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nest-rest-api:latest
+
+  
+  # Job #2 -> Desplegar el contenedor en el servidor privado. Se ejecuta en runner autohospedado: eela-ubuntu-runner
+  deploy:
+
+    needs: build
+
+    runs-on: self-ubuntu
+
+    steps: 
+      - name: Deploy Docker container
+      run: |
+        docker stop nest-rest-api
+        docker rm nest-rest-api
+        docker run --pull always -d -p 82:3000 --name nest-rest-api ${{ secrets.DOCKERHUB_USERNAME }}/nest-rest-api:latest
